[gd_scene load_steps=15 format=3 uid="uid://q5a45gs3hq8q"]

[ext_resource type="Texture2D" uid="uid://bxlum5si0an1" path="res://assets/bg.png" id="1_3xf74"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_22idw"]
[ext_resource type="Texture2D" uid="uid://dv1tf63rjg5qu" path="res://assets/tiles_ground.png" id="2_y8124"]
[ext_resource type="PackedScene" uid="uid://pewup30uexh8" path="res://scenes/player.tscn" id="3_fpvqj"]
[ext_resource type="PackedScene" uid="uid://bkm8f21avut3v" path="res://scenes/rain.tscn" id="3_jl7ey"]
[ext_resource type="AudioStream" uid="uid://86hhllg7jlm4" path="res://assets/rust_noise.mp3" id="6_61ckb"]
[ext_resource type="AudioStream" uid="uid://8pqbxnjl3tit" path="res://assets/rain_noise.mp3" id="7_8mlow"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jfdno"]
texture = ExtResource("2_y8124")
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, 0.625)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, -8, 0.625)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_w3b0s"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jfdno")

[sub_resource type="Gradient" id="Gradient_khyux"]
colors = PackedColorArray(0.717647, 0.419608, 0.207843, 1, 0.592157, 0.254902, 0.152941, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cnl6h"]
gradient = SubResource("Gradient_khyux")
width = 128
height = 128
fill = 1

[sub_resource type="Gradient" id="Gradient_bbpy3"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7ywhy"]
gradient = SubResource("Gradient_bbpy3")
width = 128
height = 128
fill_from = Vector2(0.6, 1)
fill_to = Vector2(0, 1)

[sub_resource type="Environment" id="Environment_mnlil"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.07
glow_blend_mode = 0

[node name="game" type="Node2D"]
script = ExtResource("1_22idw")

[node name="parallax_background" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="parallax_layer_1" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2(0.73, 0)

[node name="background" type="Sprite2D" parent="parallax_background/parallax_layer_1"]
position = Vector2(319, 183)
scale = Vector2(500, 333.48)
texture = ExtResource("1_3xf74")

[node name="rain" parent="parallax_background/parallax_layer_1" instance=ExtResource("3_jl7ey")]
visible = false
position = Vector2(173, -73)

[node name="player" parent="." instance=ExtResource("3_fpvqj")]
position = Vector2(317, 190)

[node name="tiles" type="TileMap" parent="."]
tile_set = SubResource("TileSet_w3b0s")
format = 2
layer_0/tile_data = PackedInt32Array(1376294, 65536, 3, 1441830, 65536, 4, 1376295, 131072, 3, 1310756, 65536, 3, 1376292, 65536, 4, 1310757, 131072, 3, 1376293, 131072, 4, 1245218, 65536, 3, 1310754, 65536, 4, 1245219, 131072, 3, 1179680, 65536, 3, 1245216, 65536, 4, 1179681, 131072, 3, 1245217, 131072, 4, 1114142, 65536, 3, 1179678, 65536, 4, 1114143, 131072, 3, 1179679, 131072, 4, 1048604, 65536, 3, 1114140, 65536, 4, 1048605, 131072, 3, 1114141, 131072, 4, 983066, 65536, 3, 1048602, 65536, 4, 983067, 131072, 3, 1048603, 131072, 4, 917528, 65536, 3, 983064, 65536, 4, 917529, 131072, 3, 983065, 131072, 4, 851990, 65536, 3, 917526, 65536, 4, 851991, 131072, 3, 917527, 131072, 4, 786452, 65536, 3, 851988, 65536, 4, 786453, 131072, 3, 851989, 131072, 4, 720914, 65536, 3, 786450, 65536, 4, 720915, 131072, 3, 786451, 131072, 4, 655376, 65536, 3, 720912, 65536, 4, 655377, 131072, 3, 720913, 131072, 4, 589838, 65536, 3, 655374, 65536, 4, 589839, 131072, 3, 655375, 131072, 4, 524300, 65536, 3, 589836, 65536, 4, 524301, 131072, 3, 589837, 131072, 4, 458762, 65536, 3, 524298, 65536, 4, 458763, 131072, 3, 524299, 131072, 4, 393224, 65536, 3, 458760, 65536, 4, 393225, 131072, 3, 458761, 131072, 4, 327686, 65536, 3, 393222, 65536, 4, 327687, 131072, 3, 393223, 131072, 4, 262148, 65536, 3, 327684, 65536, 4, 262149, 131072, 3, 327685, 131072, 4, 196610, 65536, 3, 262146, 65536, 4, 196611, 131072, 3, 262147, 131072, 4, 131072, 65536, 3, 196608, 65536, 4, 131073, 131072, 3, 196609, 131072, 4, 1310755, 131072, 4, 1441831, 131072, 4, 131070, 65536, 3, 196606, 65536, 4, 131071, 131072, 3, 196607, 131072, 4, 65532, 65536, 3, 131068, 65536, 4, 65533, 131072, 3, 131069, 131072, 4, -6, 65536, 3, 65530, 65536, 4, -5, 131072, 3, 65531, 131072, 4, -65544, 65536, 3, -8, 65536, 4, -65543, 131072, 3, -7, 131072, 4)

[node name="rust_gradient" type="TextureRect" parent="."]
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
texture = SubResource("GradientTexture2D_cnl6h")

[node name="dark_gradient" type="TextureRect" parent="."]
offset_left = 237.0
offset_right = 768.0
offset_bottom = 488.0
texture = SubResource("GradientTexture2D_7ywhy")

[node name="rust_emitter" type="Sprite2D" parent="."]
position = Vector2(2, 32)

[node name="rust_noise" type="AudioStreamPlayer2D" parent="rust_emitter"]
position = Vector2(-2, -32)
stream = ExtResource("6_61ckb")
volume_db = -23.0
autoplay = true
max_distance = 320.0

[node name="rain_noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_8mlow")
volume_db = -23.0
max_distance = 640.0

[node name="game_environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mnlil")
